# rtfm4

./: .gitignore  Cargo.toml  README.md  build.rs
book/: book.toml
book/src/: SUMMARY.md  preface.md
book/src/by-example/: app.md  resources.md  tasks.md  timer-queue.md
book/src/internals/: ceilings.md
ci/: after-success.sh  script.sh
ci/expected/: ramfunc.grep.bar  ramfunc.grep.foo
examples/: baseline.rs  capacity.rs  claim.rs  message.rs  ramfunc.rs  resource.rs  singleton.rs
macros/: Cargo.toml
macros/src/: analyze.rs  codegen.rs  lib.rs  post_check.rs  syntax.rs
src/: export.rs  lib.rs  tq.rs
tests/cfail/: insufficient-free-interrupts.rs  late-resource-assigned-to-init.rs  late-resource-uninit.rs  needs-send.rs  needs-sync.rs  resource-not-declared.rs  task-not-declared.rs  used-free-interrupt.rs
tests/cpass/: no-send.rs  no-sync.rs  resource.rs  singleton.rs  spawn.rs
