[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "cortex-m-rtfm"
readme = "README.md"
version = "0.4.0"

[lib]
name = "rtfm"

[[example]]
name = "baseline"
required-features = ["timer-queue"]

[[example]]
name = "periodic"
required-features = ["timer-queue"]

[[example]]
name = "schedule"
required-features = ["timer-queue"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-rtfm-macros = { path = "macros", version = "0.4.0" }
heapless = "0.4.0"
owned-singleton = "0.1.0"

[dev-dependencies]
alloc-singleton = "0.1.0"
cortex-m-semihosting = "0.3.1"
lm3s6965 = "0.1.3"
panic-halt = "0.2.0"

[dev-dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.1"

[features]
timer-queue = ["cortex-m-rtfm-macros/timer-queue"]

[target.x86_64-unknown-linux-gnu.dev-dependencies]
compiletest_rs = "0.3.16"
tempdir = "0.3.7"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["macros"]